--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,94 +2,54 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 @layer components {
-  .background-container {
-    @apply flex relative justify-center h-screen w-screen bg-gray-700
-  }
+	.background-container {
+		@apply flex relative justify-center h-screen w-screen bg-gray-700;
+	}
 
-  .button {
-    @apply text-xl rounded-lg p-2.5 border-transparent border-[1px] bg-gray-800 cursor-pointer hover:border-teal-600 
-  }
+	.button {
+		@apply text-xl rounded-lg p-2.5 border-transparent border-[1px] bg-gray-800 cursor-pointer hover:border-teal-600;
+	}
+
+	.page-title {
+		@apply text-4xl absolute top-14;
+	}
+
+	.table-wrapper {
+		@apply relative overflow-x-auto shadow-md sm:rounded-lg m-auto w-2/3;
+	}
+
+	.table {
+		@apply w-full text-xl rtl:text-right text-center text-gray-300;
+	}
+
+	.row {
+		@apply bg-gray-800 border-b border-gray-600;
+	}
+
+	.head {
+		@apply uppercase bg-gray-600;
+	}
+
+	.underliner {
+		@apply text-blue-500 hover:underline;
+	}
+
+	.text-area {
+		@apply h-2/3 w-full;
+	}
 }
-
-/*border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;*/
-
-/*
-
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}*/
